<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/marvelbg"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.stark.marvelquizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/nametxt"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="17dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textSize="48sp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/nametxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="69dp"
            android:layout_marginTop="20dp"
            android:ems="20"
            android:fontFamily="monospace"
            android:hint="@string/namehint"
            android:inputType="textPersonName"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="monospace"
        android:text="@string/btnname"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/holo_red_dark"
        android:textSize="18sp" />

</LinearLayout>
